--- a/about.html
+++ b/about.html
@@ -93,10 +93,17 @@
         </div>
     </div>
 
-    <footer class="about-footer">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+    <footer class="footer">
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
         </div>
     </footer>
 
