--- a/foodatory.html
+++ b/foodatory.html
@@ -11,7 +11,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!--Font-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Open+Sans:400,600|Roboto:300,600&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Open+Sans:400,600|Roboto:300,600&display=swap"
         rel="stylesheet">
 
 
@@ -444,7 +445,7 @@
                 <img src="img/foodatory/exhibit3.jpg" alt="Users stirring the sauce" width="32.5%" class="mt-3"
                     title="Users stirring the sauce" />
             </a>
-            <p class="text-credit my-3">(Exhibit Photograph by Judit Losh 2019)</p>
+            <p class="text-credit">(Exhibit Photograph by Judit Losh 2019)</p>
 
 
 
@@ -453,10 +454,18 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
         </div>
+
     </footer>
 
 
