--- a/iguanaChase.html
+++ b/iguanaChase.html
@@ -227,11 +227,15 @@
                         and survive.
                     </p>
                     <p>The similarities between these three interfaces are that all consists areas for the inventory
-                        storage, crafting menu, an image of the actual character and slots for items that the character can equip. By identifying
+                        storage, crafting menu, an image of the actual character and slots for items that the character
+                        can equip. By identifying
                         some common features, it helped define what the basic functionailities of a inventory
-                        interface should include and the importance of understanding how each feature fit together to hep the user have an easy time managing their equippment. </p>
+                        interface should include and the importance of understanding how each feature fit together to
+                        hep the user have an easy time managing their equippment. </p>
 
-
+                    <p>To gather more information about the inventory interface in games, I conducted a user testing
+                        session with participants who were young adults that played games frequently by using a set of
+                        survey </p>
                 </div>
                 <div class="col-lg-4 mt-2">
                     <a href="img/iguanaChase/arc.jpg" data-fancybox="iguanachase-research"
@@ -324,7 +328,7 @@
             <div class="project-header">Final Outcome</div>
         </div>
         <div class="container outcome">
-            <p class="content-text">
+            <p class="content-text mt-3 pb-5">
                 Overall, the client was very impressed and happy with the work that Team Tempus had produced for the
                 semester. Even thought this was a prototype, the ability to conduct and use most the features that was
                 requested at the beginning created a sense of what could the client use if this was fully functional. It
@@ -334,11 +338,19 @@
         </div>
 
     </div>
-    <footer class="footer mt-5 py-3">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+    <footer class="footer">
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
         </div>
+
     </footer>
 
 
