--- a/tastie.html
+++ b/tastie.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
     <!--Font-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Open+Sans:400,600|Roboto:300,600&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Open+Sans:400,600|Roboto:300,600&display=swap"
         rel="stylesheet">
 
     <!--Icon-->
@@ -336,7 +337,7 @@
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLDJbpWq36MDvNmgO2OpHVaF2%2FBISM3222-Food-App%3Fnode-id%3D1%253A3%26scaling%3Dscale-down"
                     allowfullscreen></iframe>
             </div>
-            <p class="content-text mt-3">Overall, Tastie was a fun project to complete as a UI/UX designer to improve on
+            <p class="content-text mt-3 pb-5">Overall, Tastie was a fun project to complete as a UI/UX designer to improve on
                 my
                 design and decision skills during the development of a product. This course also helped me learn all
                 about the process of design sprints and how to use it to produce fast and good products. This was my
@@ -347,10 +348,18 @@
 
     </div>
     <footer class="footer">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
         </div>
+
     </footer>
 
 
