--- a/index.html
+++ b/index.html
@@ -138,31 +138,58 @@
                     Illustrator.
                 </p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-3">
                 <img src="img/justTheFacts/Just The Fact_Week3_Revisit_1024.jpg" width="100%">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-3">
                 <img src="img/justTheFacts/Just The Fact_Week5_Revisit_1024.jpg" width="100%">
             </div>
-            <div class="col-lg-6 mt-4">
+            <div class="col-lg-6 my-3">
                 <img src="img/justTheFacts/JustTheFact_Week8 Revisit_1024.jpg" width="100%">
             </div>
-            <div class="col-lg-6 my-4">
+            <div class="col-lg-6 my-3">
                 <img src="img/justTheFacts/JustTheFact_Week10 Final_1024.jpg" width="100%">
             </div>
         </div>
     </div>
 
-
-
-
-
     <footer class="footer">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+            
         </div>
     </footer>
+
+
+
+    <!--
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="https://github.com/ian-wong" class="mx-2" target="_blank"><img src="img/github.png"
+                            width="25" height="25" title="Github Logo" alt="Github Logo"></a>
+
+                    <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-2" target="_blank"><img
+                            src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo"
+                            alt="LinkedIn Logo"></a>
+
+                    <a href="mailto:ianwongcontact@gmail.com" class="mx-2" target="_top"><img src="img/envelope.png"
+                            class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
+
+                </div>
+            </div>
+        </div>
+    </footer>
+-->
 
 
 
