--- a/qaafi.html
+++ b/qaafi.html
@@ -348,7 +348,7 @@
             <div class="project-header">Final Outcome</div>
         </div>
         <div class="container outcome">
-            <p class="content-text">
+            <p class="content-text mt-3 pb-5 ">
                 Overall, the client was very impressed and happy with the work that Team Tempus had produced for the
                 semester. Even thought this was a prototype, the ability to conduct and use most the features that was
                 requested at the beginning created a sense of what could the client use if this was fully functional. It
@@ -358,11 +358,19 @@
         </div>
 
     </div>
-    <footer class="footer mt-5 py-3">
-        <div class="container">
-            <span class="text-muted">This site has been developed using <a href="https://getbootstrap.com/"
-                    target="_blank">Bootstrap</a>.</span>
+    <footer class="footer">
+        <div class="d-flex justify-content-center">
+            <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
+                    height="25" title="Github Logo" alt="Github Logo"></a>
+
+            <a href="https://www.linkedin.com/in/ian-wong-ab3741159/" class="mx-3" target="_blank"><img
+                    src="img/linkedin-logo.png" width="25" height="25" title="LinkedIn Logo" alt="LinkedIn Logo"></a>
+
+            <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
+                    class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
+
         </div>
+
     </footer>
 
 
