update on iguanaChase

--- a/iguanaChase.html
+++ b/iguanaChase.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text">
-                        For this course as a team of 60 students, we were tasked to develop a 3D isometric survival game
+                        As a team of 60 students, we were tasked to develop a 3D isometric survival game
                         that involved crafting and exploration similar to games like Arc and Rust.
                     </p>
                 </div>
@@ -107,9 +107,8 @@
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text">
                         My team focused on the items and crafting aspect of the game and I was assigned as the UI/UX
-                        designer where
-                        I designed a number of icons, items and
-                        conducted user testing for all the designs and the features that my team programmed.
+                        designer where I designed a number of icons, items and conducted user testing for all the
+                        designs and the features that my team programmed.
 
 
                     </p>
@@ -156,25 +155,25 @@
 
 
                 </div>
-                <div class="col-lg-3 col-sm-12 mb-3">
+                <div class="col-lg-3 col-sm-6  col-xs-6 mb-3">
                     <a href="img/iguanaChase/stamina-empty.png" data-fancybox="character-icons"
                         data-caption="Empty stamina ">
                         <img src="img/iguanaChase/stamina-empty.png" class="border" alt="Empty stamina" width="100%">
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-12 mb-3">
+                <div class="col-lg-3 col-sm-6 mb-3">
                     <a href="img/iguanaChase/stamina-half.png" data-fancybox="character-icons"
                         data-caption="Half stamina ">
                         <img src="img/iguanaChase/stamina-half.png" class="border" alt="Half stamina" width="100%">
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-12 mb-3">
+                <div class="col-lg-3 col-sm-6 mb-3">
                     <a href="img/iguanaChase/stamina-full.png" data-fancybox="character-icons"
                         data-caption="Full stamina">
                         <img src="img/iguanaChase/stamina-full.png" class="border" alt="Full stamina" width="100%">
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-12 mb-3">
+                <div class="col-lg-3 col-sm-6 mb-3">
                     <a href="img/iguanaChase/hunger.png" data-fancybox="character-icons" data-caption="Hunger icon ">
                         <img src="img/iguanaChase/hunger.png" class="border" alt="Hunger icon" width="100%">
                     </a>
@@ -231,11 +230,26 @@
                         can equip. By identifying
                         some common features, it helped define what the basic functionailities of a inventory
                         interface should include and the importance of understanding how each feature fit together to
-                        hep the user have an easy time managing their equippment. </p>
+                        hep the user have an easy time managing their equipment. </p>
 
-                    <p>To gather more information about the inventory interface in games, I conducted a user testing
-                        session with participants who were young adults that played games frequently by using a set of
-                        survey </p>
+                    <p>To gather more research about the inventory interface in games, I conducted a user testing
+                        session with participants who were young adults aged 19 - 22 who were avid gamers, familiar with
+                        open world survival games like Rust. I conducted the session using a survey asking the
+                        participants what are the most important features of the interface and to compare each of the
+                        three interfaces above. </p>
+
+                    <p>I interviewed around 5 people and found that:</p>
+                    <ul>
+                        <li class="mb-3"> A simplistic interface design like Arc's inventory was the best out of the
+                            three because of
+                            where each element is positioned spaciously. </li>
+
+                        <li class="mb-3">Including the most significant character statistics is important to understand the
+                            character's abilities and the current level of your character.</li>
+
+                        <li>Implementing too many statistics and features will crowd the interface making the content
+                            difficult to see and comprehend.</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4 mt-2">
                     <a href="img/iguanaChase/arc.jpg" data-fancybox="iguanachase-research"
@@ -262,34 +276,22 @@
                     <p class="subheading">Wireframe</p>
 
                     <p class="content-text">
-                        I created wireframes during the first sprint for the initial design of the main page. The first
-                        wireframe consisted of the details of all the staff members for that specific facility
-                        and floor is displayed specifically the staff's name,
-                        facility, floor and seat is shown on the sidebar. This did not prove to be good as a lot of
-                        information will be displayed when there are many staff allocated and made it difficult to see
-                        the amount of seats available.
-                    </p>
-
-                    <p class="content-text">
-                        The second wireframe consisted of having the data of the seats available and unavailable for the
-                        specific floor and then list the staff that are currently allocated when the user clicked on the
-                        used category. The third wireframe showed the listed staff members with bare minimum details
-                        such as there name or staff ID and when clicked upon more details of the staff will display.
+                        From the feedback gained from the user testing session, I created two different wireframes that consist of the similiar elements in the interface but positioned differently. The first wireframe was designed to be a small pop up inventory interface like Minecraft's interface compared to the other wireframe which is a full screen interface.   
                     </p>
 
                 </div>
                 <div class="col-lg-6 mt-2">
                     <a href="img/iguanaChase/iguanachase-wireframe.jpg" data-fancybox="iguana-wireframe"
-                        data-caption="Low-fidelity Mockup of home screen">
+                        data-caption="Popup Wireframe">
                         <img src="img/iguanaChase/iguanachase-wireframe.jpg" class="border"
-                            alt="Low-fidelity Mockup of home screen" width="100%">
+                            alt="Popup interface wireframe" width="100%">
                     </a>
                 </div>
                 <div class="col-lg-6 mt-2">
                     <a href="img/iguanaChase/iguanachase-wireframe2.jpg" data-fancybox="iguana-wireframe"
-                        data-caption="Low-fidelity Mockup of statistics screen">
+                        data-caption="Full Screen interface wireframe">
                         <img src="img/iguanaChase/iguanachase-wireframe2.jpg" class="border"
-                            alt="Low-fidelity Mockup of statistics screen" width="100%">
+                            alt="Full Screen interface wireframe" width="100%">
                     </a>
                 </div>
 
@@ -338,7 +340,7 @@
         </div>
 
     </div>
-    <footer class="footer">
+    <footer class="footer bg-white">
         <div class="d-flex justify-content-center">
             <a href="https://github.com/ian-wong" class="mx-3" target="_blank"><img src="img/github.png" width="25"
                     height="25" title="Github Logo" alt="Github Logo"></a>
