iguanaChase link fixed

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     coordinate in a large development environment. We were separated into fifteen teams of four,
                     where each team would manage a GitHub ticket to focus on a number of tasks.
                 </p>
-                <a class="btn info-button" href="iguanachase.html" role="button">See More
+                <a class="btn info-button" href="iguanaChase.html" role="button">See More
                     Information</a>
             </div>
             <div class="col-lg-2"></div>
