updates information to iguanaChase

--- a/iguanaChase.html
+++ b/iguanaChase.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text">
                         My team focused on the items and crafting aspect of the game and I was assigned as the UI/UX
-                        designer where I designed a number of icons, items and conducted user testing for all the
+                        designer and graphics designer where I designed a number of icons, items and conducted user testing for all the
                         designs and the features that my team programmed.
 
 
@@ -192,9 +192,9 @@
                         design did not get to be used into the real game.</p>
                 </div>
                 <div class="col-lg-12 mb-3">
-                    <a href="img/iguanaChase/iguanachase-UI.jpg" data-fancybox="iguanachase-UI"
+                    <a href="img/iguanaChase/iguanachase-mockup2.png" data-fancybox="iguanachase-UI"
                         data-caption="Item inventory interface">
-                        <img src="img/iguanaChase/iguanachase-UI.jpg" alt="Item inventory interface" width="100%">
+                        <img src="img/iguanaChase/iguanachase-mockup2.png" alt="Item inventory interface" width="100%">
                     </a>
                 </div>
 
@@ -244,7 +244,8 @@
                             three because of
                             where each element is positioned spaciously. </li>
 
-                        <li class="mb-3">Including the most significant character statistics is important to understand the
+                        <li class="mb-3">Including the most significant character statistics is important to understand
+                            the
                             character's abilities and the current level of your character.</li>
 
                         <li>Implementing too many statistics and features will crowd the interface making the content
@@ -276,7 +277,10 @@
                     <p class="subheading">Wireframe</p>
 
                     <p class="content-text">
-                        From the feedback gained from the user testing session, I created two different wireframes that consist of the similiar elements in the interface but positioned differently. The first wireframe was designed to be a small pop up inventory interface like Minecraft's interface compared to the other wireframe which is a full screen interface.   
+                        From the feedback gained from the user testing session, I created two different wireframes that
+                        consist of the similiar elements in the interface but positioned differently. The first
+                        wireframe was designed to be a small pop up inventory interface like Minecraft's interface
+                        compared to the other wireframe which is a full screen interface.
                     </p>
 
                 </div>
@@ -297,22 +301,39 @@
 
                 <!--Mockup Design-->
                 <div class="col-lg-12 content-divider">
-                    <p class="subheading">Mockup Design</p>
+                    <p class="subheading">Design Iteration</p>
 
                     <p class="content-text">
-                        Through iteration, this was the final design for the high fidelity prototype. You can see
-                        aspects from the low fidelity prototype that was implemented and what was changed to be the end
-                        result.
+                        Aspects from the second wireframe was implemented to the mockup designs as users were happy with
+                        the size of the inventory and crafting area. Through iteration, the final mockup included some
+                        statistics about the character below the inventory and shows the item hotbar at the bottom to
+                        easily allow users to put items to and from the inventory.
                     </p>
+                    <p class="content-text"> Additionally, creating a button to craft items made it easier for the user
+                        to understand how to craft the item. I changed the colour scheme from gray as users stated that
+                        it was bland and boring to have a dull background colour.</p>
 
 
                 </div>
 
-                <div class="col-lg-6 mb-3">
-                    <a href="img/iguanaChase/iguanachase-UI.jpg" data-fancybox="iguanachase-inventory"
+                <div class="col-lg-6 col-sm-6  mb-3">
+                    <div class="content-subheading">
+                        Before
+                    </div>
+                    <a href="img/iguanaChase/iguanachase-mockup1.png" data-fancybox="iguanachase-inventory"
                         data-caption="Mockup Design of Inventory">
-                        <img src="img/iguanaChase/iguanachase-UI.jpg" class="border" alt="Mockup Design of Inventory"
-                            width="100%">
+                        <img src="img/iguanaChase/iguanachase-mockup1.png" class="border"
+                            alt="Mockup Design of Inventory" width="100%">
+                    </a>
+                </div>
+                <div class="col-lg-6 col-sm-6 mb-3">
+                    <div class="content-subheading">
+                        After
+                    </div>
+                    <a href="img/iguanaChase/iguanachase-mockup2.png" data-fancybox="iguanachase-inventory"
+                        data-caption="Mockup Design of Inventory">
+                        <img src="img/iguanaChase/iguanachase-mockup2.png" class="border"
+                            alt="Mockup Design of Inventory" width="100%">
                     </a>
                 </div>
 
@@ -331,11 +352,9 @@
         </div>
         <div class="container outcome">
             <p class="content-text mt-3 pb-5">
-                Overall, the client was very impressed and happy with the work that Team Tempus had produced for the
-                semester. Even thought this was a prototype, the ability to conduct and use most the features that was
-                requested at the beginning created a sense of what could the client use if this was fully functional. It
-                was a fantastic opportunity to work in a project with a real client and experience professional work in
-                an university environment.
+                In summary, the final outcome for the team was a success in terms of designing and developing the items
+                and the interaction with the player and the items. However, the inventory interface did not get
+                implemented which created an unappealing design and experience from the rest of the game. I was proud of the work that I contributed to the project as a whole since working together as a team of 60 students was definitely one of the biggest challenges that I faced. Making sure that everyone understood what needs to be done each week to keep aligned with the project's requirements took a lot of meetings and stand ups but after a couple weeks, the communication between teams were brilliant.
             </p>
         </div>
 
