--- a/tastie.html
+++ b/tastie.html
@@ -132,7 +132,7 @@
             <div class="row">
                 <!--Feature 1-->
                 <div class="col-lg-12 mt-3">
-                    <p class="subheading">Feature One: Selecting Meals</p>
+                    <p class="subheading">Selecting Meals</p>
                     <p class="content-text">The users are first presented with the different meals that can be
                         ordered from and the corresponding day of the week so if necessary, the users can plan their
                         meal ahead of time and select their meals. The users name will be displayed at the top of the
@@ -150,23 +150,10 @@
 
 
 
-                <!--
-                <div class="col-lg-4 col-sm-4 mb-3">
-                    <a href="img/tastie/homeScreen.jpg" data-fancybox="feature1" data-caption="Home screen">
-                        <img src="img/tastie/homeScreen.jpg" class="border" alt="Home screen" width="100%">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-4 "></div>
-
-                <div class="col-lg-4 col-sm-4 mb-3">
-                    <a href="img/tastie/dinner.png" data-fancybox="feature1" data-caption="List of dishes from dinner">
-                        <img src="img/tastie/dinner.png" class="border" alt="List of dishes from dinner" width="100%">
-                    </a>
-                </div>
-                 -->
+               
                 <!--Feature 2-->
                 <div class="col-lg-12 content-divider">
-                    <p class="subheading">Feature Two: Ordering Meals</p>
+                    <p class="subheading">Ordering Meals</p>
                     <p class="content-text">A more detailed content is shown when the user clicks into a certain dish. A
                         button to add the dish to the order is displayed underneath the content of the dish. After
                         adding a dish to the order, a popup window to prompt the user if they want to continue ordering
@@ -181,7 +168,7 @@
 
                 <!--Feature 3-->
                 <div class="col-lg-12 content-divider">
-                    <p class="subheading">Feature Three: Requesting Meals</p>
+                    <p class="subheading">Requesting Meals</p>
                     <p class="content-text">To request a new dish to be added to the menu, the user must complete the
                         necessary form of to be able to send the request.</p>
 
@@ -190,13 +177,6 @@
                         Your browser does not support HTML5 video.
                     </video>
                 </div>
-                <!-- 
-                    <div class="col-lg-4 col-sm-4 mb-3">
-                    <a href="img/tastie/request.jpg" data-fancybox="feature3" data-caption="Request a Dish Interface">
-                        <img src="img/tastie/request.jpg" class="border" alt="Request a Dish Interface" width="100%">
-                    </a>
-                </div>
-                -->
 
 
             </div>
