Update Qaafi final outcome

--- a/qaafi.html
+++ b/qaafi.html
@@ -281,7 +281,7 @@
                 </div>
 
                 <!--Low Fidelity-->
-                <div class="col-lg-12 mt-4 ">
+                <div class="col-lg-12 mt-5 ">
                     <p class="subheading">Low-fidelity Prototype</p>
 
                     <p class="content-text">
@@ -312,7 +312,7 @@
                 </div>
 
                 <!--High Fidelity Prototype-->
-                <div class="col-lg-12 mt-4 ">
+                <div class="col-lg-12 mt-5 ">
                     <p class="subheading">High-fidelity Prototype</p>
 
                     <p class="content-text">
@@ -350,10 +350,12 @@
         <div class="container outcome">
             <p class="content-text mt-3 pb-5 ">
                 Overall, the client was very impressed and happy with the work that Team Tempus had produced for the
-                semester. Even thought this was a prototype, the ability to conduct and use most the features that was
-                requested at the beginning created a sense of what could the client use if this was fully functional. It
-                was a fantastic opportunity to work in a project with a real client and experience professional work in
-                an university environment.
+                semester. Even though this was a high-fidelity prototype, the ability to conduct and use the features
+                that was requested at the beginning of the scope created a sense of what the client could eventually use
+                when fully developed. It was a fantastic opportunity to work in a project with a real client and
+                experience professional work in
+                an university environment. The experience that I gained helped me be more confident in communicating in
+                a professional setting and managing the weekly tasks that needed to be completed for the client to see.
             </p>
         </div>
 
