--- a/tastie.html
+++ b/tastie.html
@@ -134,9 +134,9 @@
                 <div class="col-lg-12 mt-3">
                     <p class="subheading">Selecting Meals</p>
                     <p class="content-text">The users are first presented with the different meals that can be
-                        ordered from and the corresponding day of the week so if necessary, the users can plan their
-                        meal ahead of time and select their meals. The users name will be displayed at the top of the
-                        application and prompt them with a question asking what the users would like to eat.</p>
+                        ordered and the corresponding day of the week. If necessary, the user can plan their
+                        meal ahead of time and select their meals. The name of the user will be displayed at the top of
+                        the application and prompt them with a question asking what the users would like to eat.</p>
 
                     <p class="content-text">A list of available dishes and drinks are shown for the selected meal. The
                         most popular dish is
@@ -150,7 +150,7 @@
 
 
 
-               
+
                 <!--Feature 2-->
                 <div class="col-lg-12 content-divider">
                     <p class="subheading">Ordering Meals</p>
@@ -317,7 +317,8 @@
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FLDJbpWq36MDvNmgO2OpHVaF2%2FBISM3222-Food-App%3Fnode-id%3D1%253A3%26scaling%3Dscale-down"
                     allowfullscreen></iframe>
             </div>
-            <p class="content-text mt-3 pb-5">Overall, Tastie was a fun project to complete as a UI/UX designer to improve on
+            <p class="content-text mt-3 pb-5">Overall, Tastie was a fun project to complete as a UI/UX designer to
+                improve on
                 my
                 design and decision skills during the development of a product. This course also helped me learn all
                 about the process of design sprints and how to use it to produce fast and good products. This was my
