change intro for Tasty

--- a/tastie.html
+++ b/tastie.html
@@ -69,7 +69,7 @@
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text">
                         Did you know that elderlies living in aged care facilities are served food that do not have
-                        enough nutrients and truly disgusting meals everyday? Today, there are still many nursing homes
+                        enough nutrients and looks unappetising? Today, there are still many nursing homes
                         who serve store-bought garlic bread, a hot dog and tomato sauce for dinner. In today's
                         society, this is not acceptable and elderly people in nursing homes should be able to receive a
                         well-fed meal.
@@ -85,9 +85,8 @@
                     <p class="content-text">Tastie is a mobile application that aged care facilities can use for elderly
                         to easily select their
                         daily meals. Additionally, patients can also request a new dish and
-                        input any dietary information that must be known to nurses and chefs. A voice
-                        is given to the patients by implementing a voting system to vote for the new dishes to be added
-                        to the menu.
+                        input any dietary information that must be known to nurses and chefs. Also, by implementing a
+                        voting system for the new dishes to be added, it gives the elderly a voice.
                     </p>
                 </div>
             </div>
@@ -99,7 +98,7 @@
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text"> It is targeted towards elderly patients living in nursing facilities to
                         help with their daily activities in selecting meal. In particular, elderly patients who are not
-                        satisfied with their current food that is provided to them.
+                        satisfied with their current food that is provided to them by the nursing home.
                 </div>
             </div>
             <!-- Role-->
@@ -109,7 +108,7 @@
                 </div>
                 <div class="col-lg-10 mt-2 ml-5">
                     <p class="content-text">
-                        UI Designer, UX Designer
+                        UI Designer, UX Designer, Research, Requirements gathering
                     </p>
 
                 </div>
@@ -133,14 +132,12 @@
                 <!--Feature 1-->
                 <div class="col-lg-12 mt-3">
                     <p class="subheading">Selecting Meals</p>
-                    <p class="content-text">The users are first presented with the different meals that can be
-                        ordered and the corresponding day of the week. If necessary, the user can plan their
-                        meal ahead of time and select their meals. The name of the user will be displayed at the top of
-                        the application and prompt them with a question asking what the users would like to eat.</p>
+                    <p class="content-text">A range of different food and drinks can be
+                        ordered to plan for the day or everyday of the week. Whether you want to try different food or
+                        order a different dish everyday, you can easily order to quickly organise your meal.</p>
 
-                    <p class="content-text">A list of available dishes and drinks are shown for the selected meal. The
-                        most popular dish is
-                        listed first to let the users know which dish is selected by the majority of the users. </p>
+                    <p class="content-text">The most popular dish is recommended at the top of the list to avoid any
+                        jealously from one another.</p>
 
                     <video width="50%" controls>
                         <source src="video/tastie/Feature1.mp4" type="video/mp4">
@@ -154,10 +151,9 @@
                 <!--Feature 2-->
                 <div class="col-lg-12 content-divider">
                     <p class="subheading">Ordering Meals</p>
-                    <p class="content-text">A more detailed content is shown when the user clicks into a certain dish. A
-                        button to add the dish to the order is displayed underneath the content of the dish. After
-                        adding a dish to the order, a popup window to prompt the user if they want to continue ordering
-                        more dishes or confirm the meal is presented.</p>
+                    <p class="content-text">With the simple content of the dish, you'll find everything you need about
+                        the dish information at a glance. There's no need to ask the staff what is available and whether
+                        or not what's in the dish. All the information is at one place and the process of ordering is even easier. </p>
 
                     <video width="50%" controls>
                         <source src="video/tastie/Feature2.mp4" type="video/mp4">
