Jess Swann Website added

--- a/index.html
+++ b/index.html
@@ -63,8 +63,22 @@
     <!--Portfolio-->
     <div class="container">
         <div class="row">
+            <!--Jess Swann: PT Website-->
             <div class="col-lg-12 mt-5">
-                <!--Foodatory-->
+                <div class="main-subheading">Jess Swann: PT Website</div>
+                <p class="content-text">This is an website for a client that needed a company website for her personal
+                    training business. Jess requested a site where she can give a link to people who wants more
+                    information about herself. It is also a place where she can sell her products online as well as inspire people to cook some of her recipes.</p>
+                <a class="btn info-button" href="jessswann.html" role="button">See More Information</a>
+            </div>
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 mt-4">
+                <img src="img/jessSwann/jessSwann.jpg" alt="Jess Swann Main Screen" title="Jess Swann Main Screen"
+                    width="100%">
+            </div>
+            <!--
+            <div class="col-lg-12 mt-5">
+               
                 <div class="main-subheading">Foodatory</div>
                 <p class="content-text">Foodatory is a collection of highly interactive mini-games designed to
                     introduce basic cooking skills and the concept of food safety in a fun, safe and educational
@@ -81,6 +95,7 @@
                 <img src="img/foodatory/foodatory.jpg" alt="Hell's Kitchen Team Photo" title="Hell's Kitchen Team Photo"
                     width="100%">
             </div>
+        -->
 
             <!--Tastie-->
             <div class="col-lg-12 mt-5">
@@ -163,7 +178,7 @@
 
             <a href="mailto:ianwongcontact@gmail.com" class="mx-3" target="_top"><img src="img/envelope.png"
                     class="mt-1" width="27" height="27" title="Email" alt="Email Logo"></a>
-            
+
         </div>
     </footer>
 
