--- a/jessswann.html
+++ b/jessswann.html
@@ -94,7 +94,7 @@
                     <p class="content-subheading">Audience</p>
                 </div>
                 <div class="col-lg-10 mt-2 ml-5">
-                    <p class="content-text"> It is targeted towards anyone who goes to the goes to the gym and trains
+                    <p class="content-text"> It is targeted towards anyone who goes to the gym and trains
                         hard but may want extra motivation or knowledge about their training, nutrition and coaching.
                         This is aimed for people already are or want to be more reliant and confident in the gym.
                 </div>
