updated jess's description

--- a/jessswann.html
+++ b/jessswann.html
@@ -231,7 +231,9 @@
                         </ul>
                         From these questions, I recognised her problem with not having that online presence besides
                         Instagram for users to be easily able find information about her. Additionally, Jess pitched her
-                        idea and discussed what needed to be completed and the main focuses of this website.
+                        ideas and discussed what needs to be completed. The main focuses of this website are to have a
+                        place where she could write recipes, sell her programs, sell her merchandise, eventually be able
+                        to post blogs and set up online 1-on-1 training sessions for clients.
 
                     </p>
 
@@ -242,7 +244,8 @@
                     <p class="content-text">
                         I started to find serveral different personal trainer websites by searching "Best Personal
                         Trainer Websites" on google. This was to get a feel of what the style, layout, colour of the
-                        interface was like with PT websites which provided me with many ideas and compositions of designs
+                        interface was like with PT websites which provided me with many ideas and compositions of
+                        designs
                         for Jess's website. I did a competitors analysis of each website to compare the similarities and
                         differences of the information provided and how the information was portrayed. Some of my
                         inspirations for this project were:
